translations_exported/fr/docs_exported/1.17/crafttweaker/docs/vanilla/api/sound/SoundEvent.md
# SoundEvent

The event is not cancelable.

The event does not have a result.

## Importing the class

It might be required for you to import the package if you encounter any issues (like casting an Array), so better be safe than sorry and add the import at the very top of the file.
```zenscript
import crafttweaker.api.sound.SoundEvent;
```


## Methods

:::group{name=getLocation}

Return Type: [ResourceLocation](/vanilla/api/resource/ResourceLocation)

```zenscript
// SoundEvent.getLocation() as ResourceLocation

mySoundEvent.getLocation();
```

:::


## Properties

| Name         | Type                                                       | Has Getter | Has Setter | Description             |
| ------------ | ---------------------------------------------------------- | ---------- | ---------- | ----------------------- |
| Localisation | [ResourceLocation](/vanilla/api/resource/ResourceLocation) | true       | false      | No Description Provided |

